<?xml version="1.0"?>
<package format="2">
  <name>iiwa_workcell_moveit_config</name>
  <version>1.0.0</version>
  <description>
    The iiwa_workcell_moveit_config package contains the configuration for the MoveIt! Framework.
  </description>
  <maintainer email="alexander.dengg@students.fhv.at">Alexander Dengg</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/dornbirndevelops/iiwa_workcell</url>
  <author email="alexander.dengg@students.fhv.at">Alexander Dengg</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <build_depend>iiwa_workcell_description</build_depend>
  <exec_depend>iiwa_workcell_description</exec_depend>
  <exec_depend>iiwa_control</exec_depend>
  <exec_depend>iiwa_hw</exec_depend>
</package>
